--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 }
 
 .blue-bg {
-  background: url("/assets/black background.png") repeat;
+  background: url("/assets/black background.jpg") repeat;
   background-size: 100%;
 }
 
